@@ -9,6 +9,7 @@ ENH: added search for quickstart tutorials (Wei)
 ENH: added support to property tags for template owner control (Qiang)
 ENH: added Bulgarian requirement checker messages (StanProg)
 ENH: added TTheme.BaseUrl and TTheme.BasePath property (Qiang)
+ENH: refactored TUserManager and TAuthManager so that they are easier to be extended (Qiang)
 CHG: Ticket#151 - URL format is modified to handle empty GET values (Qiang)
 CHG: Ticket#153 - TAssetManager now ignores .svn directories (Qiang)
 NEW: TTableHeaderRow, TTableFooterRow and table section support (Qiang)
